--- a/App/ClientApp/src/themes/dark-theme.scss
+++ b/App/ClientApp/src/themes/dark-theme.scss
@@ -1,8 +1,9 @@
-$dark-primary: mat-palette($mat-light-blue, 800, 600, 900);
-$dark-accent: mat-palette($mat-cyan, 600, 400, 800);
-$dark-warn: mat-palette($mat-red);
+@use '~@angular/material' as mat;
+$dark-primary: mat.define-palette(mat.$light-blue-palette, 800, 600, 900);
+$dark-accent: mat.define-palette(mat.$cyan-palette, 600, 400, 800);
+$dark-warn: mat.define-palette(mat.$red-palette);
 
-$dark-theme: mat-dark-theme((
+$dark-theme: mat.define-dark-theme((
   color: (
     primary: $dark-primary,
     accent: $dark-accent,
